--- a/sfg-pet-clinic/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/sfg-pet-clinic/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -6,5 +6,17 @@
 </head>
 <body>
 <h1 th:text="'List of Vets'"></h1>
+<table>
+	<tr>
+		<th>ID</th>
+		<th>First Name</th>
+		<th>Last Name</th>
+	</tr>
+	<tr th:each="vet:${vets}">
+		<td th:text="${vet.id}"></td>
+		<td th:text="${vet.firstName}"></td>
+		<td th:text="${vet.lastName}"></td>
+	</tr>
+</table>
 </body>
 </html>
