--- a/sfg-pet-clinic/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/sfg-pet-clinic/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"  th:replace="~{fragments/layout :: layout (~{::body},'owners')}">
 <head>
 <meta charset="ISO-8859-1">
 <title>Owner Index page</title>
 </head>
 <body>
-<h1 th:text="'List of Owners'"></h1>
-<table>
+<h2 th:text="'List of Owners'"></h2>
+<table  class="table table-striped">
 	<tr>
-		<th>ID</th>
-		<th>First Name</th>
-		<th>Last Name</th>
+		<th style="width: 150px;">ID</th>
+		<th style="width: 150px;">First Name</th>
+		<th style="width: 150px;">Last Name</th>
 	</tr>
 	<tr th:each="owner : ${owners}">
 		<td th:text="${owner.id}"></td>
