--- a/sfg-pet-clinic/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/sfg-pet-clinic/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'vets')}">
 <head>
 <meta charset="ISO-8859-1">
 <title>Vet Index list</title>
 </head>
 <body>
-<h1 th:text="'List of Vets'"></h1>
-<table>
+<h2 th:text="'List of Vets'"></h2>
+<table class="table table-striped">
 	<tr>
 		<th>ID</th>
 		<th>First Name</th>
